Fix clipping issue with main carousel on mobile

--- a/css/application.css
+++ b/css/application.css
@@ -824,7 +824,7 @@ button.searchicon--mobile {
   width: 100%;
   height: 550px;
   position: relative;
-  padding: 120px 0; }
+  align-content: center; }
 
 .carousel__text {
   position: relative;
@@ -832,8 +832,11 @@ button.searchicon--mobile {
   margin: auto; }
   .carousel__text h1 {
     margin: 0;
-    font-size: 4em;
+    font-size: 2.5em;
     font-weight: 600; }
+    @media (min-width: 992px) {
+      .carousel__text h1 {
+        font-size: 4em; } }
   .carousel__text p {
     font-size: 1.5em;
     width: 50%;
