--- a/scss/layout/_carousel.scss
+++ b/scss/layout/_carousel.scss
@@ -10,7 +10,7 @@
     width: 100%;
     height: 550px;
     position: relative;
-    padding: 120px 0;
+    align-content: center;
 }
 
 .carousel__text {
@@ -19,7 +19,10 @@
     margin: auto;
     h1 {
         margin: 0;
-        font-size: 4em;
+        font-size: 2.5em;
+        @media (min-width: $break-medium) {
+            font-size: 4em;
+        }
         font-weight: $font-weight--med-bold;
     }
     p {
